--- a/app/views/sub_chapters/show.html.erb
+++ b/app/views/sub_chapters/show.html.erb
@@ -21,5 +21,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_sub_chapter_path(@sub_chapter) %> |
-<%= link_to 'Back', sub_chapters_path %>
+<%= link_to 'Edit', edit_chapter_sub_chapter_path(@chapter, @sub_chapter) %> |
+<%= link_to 'Back', chapter_sub_chapters_path(@chapter) %>
